--- a/PROG6221_Part3_St10071737/App.xaml
+++ b/PROG6221_Part3_St10071737/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:PROG6221_Part3_St10071737"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/MenuFunctionButtonTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
