did some more stuff

--- a/PROG6221_Part3_St10071737/App.xaml
+++ b/PROG6221_Part3_St10071737/App.xaml
@@ -16,6 +16,10 @@
                 <view:HomeView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewModel:ViewAllRecipesViewModel}">
+                <view:ViewRecipes/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
