--- a/PROG6221_Part3_St10071737/MainWindow.xaml
+++ b/PROG6221_Part3_St10071737/MainWindow.xaml
@@ -100,6 +100,7 @@
                         
                         <Button Width="50"
                                 Height="50"
+                                Click="ExitButton_Click"
                                 Style="{StaticResource MenuFuntionButtonTheme}">
                             <Button.Background>
                                 <ImageBrush ImageSource="/Images/Exit.png"
@@ -113,7 +114,7 @@
 
                         <Button Width="50"
                                 Height="50"
-                                Click="Button_Click"
+                                Click="GitButton_Click"
                                 Style="{StaticResource MenuFuntionButtonTheme}">
                         <Button.Background>
                             <ImageBrush ImageSource="/Images/Github.png"
