--- a/PROG6221_Part3_St10071737/Theme/MenuFunctionButtonTheme.xaml
+++ b/PROG6221_Part3_St10071737/Theme/MenuFunctionButtonTheme.xaml
@@ -19,7 +19,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            
+            <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="1"/>
         </Style.Setters>
     </Style>
