--- a/PROG6221_Part3_St10071737/MVVM/View/ViewAllRecipesView.xaml
+++ b/PROG6221_Part3_St10071737/MVVM/View/ViewAllRecipesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PROG6221_Part3_St10071737.MVVM.View.ViewRecipes"
+﻿<UserControl x:Class="PROG6221_Part3_St10071737.MVVM.View.ViewAllRecipesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,20 @@
              xmlns:local="clr-namespace:PROG6221_Part3_St10071737.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <StackPanel>
+        <TextBlock Text="Recipes"
+                   Foreground="White"
+                   FontSize="28"
+                   HorizontalAlignment="Left"
+                   Margin="0,0,0,10"/>
+        <Grid Height="400">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="150"/>
+            </Grid.ColumnDefinitions>
             
-    </Grid>
+            
+            
+        </Grid>
+    </StackPanel>
 </UserControl>
